IDVA6-1145: Add more test coverage