@@ -1,6 +1,7 @@
 package uk.gov.companieshouse.acsp.manage.users.service;
 
 import java.util.List;
+import java.util.stream.Collectors;
 import org.springframework.stereotype.Service;
 import org.springframework.transaction.annotation.Transactional;
 import uk.gov.companieshouse.acsp.manage.users.mapper.AcspMembershipListMapper;
@@ -37,7 +38,7 @@ public class AcspMembersService {
         acspMembersRepository
             .fetchAcspMembersByUserId(user.getUserId())
             .filter(acspMembersDao -> includeRemoved || !acspMembersDao.beenRemoved())
-            .toList(),
+            .collect(Collectors.toList()),
         user);
   }
 }
